views.py contest.html
Add participants in template

--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -28,10 +28,13 @@
   
       <div>
         <h2>Участники</h2>
-
-        <p>
-          Здесь должен быть список участников
-        </p>
+          {% for user in users %}
+            <div>
+              {{ user.name }}
+              {{ user.email }}
+              {{ user.code }}
+            </div>
+          {% endfor %}
       </div>
     </div>
   </section>
