--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -23,6 +23,13 @@
           {% csrf_token %}
           {{ form }}
           <button type="submit">Submit</button>
+          {% if messages %}
+          <ul class="messages">
+            {% for message in messages %}
+            <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+            {% endfor %}
+          </ul>
+          {% endif %}
         </form>
       </div>
   
