--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -7,6 +7,8 @@
   <title>Конкурс</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  {% load django_bootstrap5 %}
+  {% bootstrap_css %}
 </head>
 <body class="bg-body-secondary">
   <section class="p-2 p-md-5">
@@ -19,29 +21,41 @@
 
       <div>
         <h2>Форма участника</h2>
-        <form action="/" method="post">
-          {% csrf_token %}
-          {{ form }}
-          <button type="submit">Submit</button>
-          {% if messages %}
-          <ul class="messages">
-            {% for message in messages %}
-            <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-            {% endfor %}
-          </ul>
-          {% endif %}
-        </form>
+        <div class="p-3 bg-light-subtle rounded-3">
+          <form method="post" action="/">
+            {% csrf_token %}
+            {% bootstrap_form form show_label=False %}
+            <div class="d-grid col-3">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+            {% if messages %}
+            <ul class="messages" style="list-style:none;">
+              {% for message in messages %}
+              <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+              {% endfor %}
+            </ul>
+            {% endif %}
+          </form>
+        </div>
       </div>
   
       <div>
         <h2>Участники</h2>
-          {% for user in users %}
-            <div>
-              {{ user.name }}
-              {{ user.email }}
-              {{ user.code }}
+          <div class="row">
+            {% for user in users %}
+            <div class="col-6 p-3">
+              <div class="card" style="height: 14rem;">
+                <div class="card-body">
+                  <h3 class="card-title">{{ user.name }}</h3>
+                  <p class="card-text">
+                    {{ user.email }}<br>
+                    {{ user.code }}
+                  </p>
+                </div>
+              </div>
             </div>
-          {% endfor %}
+            {% endfor %}
+        </div>
       </div>
     </div>
   </section>
